# NT137_G5

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  config.yaml.example  main.py  malware_analyzer.spec  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  phase10-cross-platform.yml  release.yml
config/: dangerous_apis.json  heuristic_rules.json
data/: dataset_all_samples.csv  dataset_all_samples.jsonl
docs/: CLI-SCRIPTS-REFERENCE.md  FEATURES.md  README.md  architecture-and-concepts.md  benchmark-scan-1000-pe.md  benchmark-scan-matrix.md  cli-cheatsheet.md  intel-and-dataset.md  packaging.md  phase11-ml-playbook.md  setup-env.md  troubleshooting.md  user-guide.md
malware_analyzer/: __init__.py
malware_analyzer/api/: __init__.py  main.py  schemas.py  state.py
malware_analyzer/api/routes/: __init__.py  intelligence.py  samples.py  scan.py
malware_analyzer/cli/: __init__.py  commands.py  watch_daemon.py
malware_analyzer/config/: __init__.py  constants.py  logging_setup.py  settings.py
malware_analyzer/core/: __init__.py  cfg_builder.py  enrichment.py  hashing.py  identifier.py  models.py  scanner.py  similarity.py
malware_analyzer/core/extractors/: __init__.py  api_extractor.py  cfg_builder.py  feature_vector.py  string_extractor.py
malware_analyzer/core/parsers/: __init__.py  apk_parser.py  base.py  factory.py  pe_parser.py
malware_analyzer/detection/: __init__.py  heuristic.py  similarity.py  yara_engine.py
malware_analyzer/gui/: __init__.py  main_window.py
malware_analyzer/gui/assets/: README.md  stylesheet.qss
malware_analyzer/gui/views/: __init__.py  cluster_view.py  detail_view.py  explorer_view.py  intel_view.py  ml_view.py  report_view.py  sample_table_model.py  scan_view.py  settings_dialog.py
malware_analyzer/intelligence/: __init__.py  bazaar_client.py  vt_client.py  watcher.py
malware_analyzer/ml/: __init__.py  predictor.py  security_gate.py  trainer.py
malware_analyzer/reports/: generator.py
malware_analyzer/reports/templates/: batch_report.html  single_report.html
malware_analyzer/storage/: __init__.py  crud.py  database.py  exporter.py  models.py  repository.py
models/: model_log.jsonl
models/reports/: cli_diag_min5_classification_20260401_071529.md  family_classifier_classification_20260331_014920.md  family_classifier_classification_20260401_104940.md  family_classifier_classification_20260403_014941.md  latest_report.md  ml_coverage.json  ml_coverage.md
rules/yara/: android_dangerous_permissions.yar  android_riskware_installer_permissions.yar  eicar_test.yar  packed_upx.yar  suspicious_strings.yar  windows_process_injection.yar
rules/yara/android/: android_family_arsink.yar  android_family_spynote.yar  android_generic_suspicious_api_usage.yar  android_target_banking_overlay.yar  android_target_sms_spyware.yar
rules/yara/android/elf_malware/: elf.mirai_auto.yar  (+6 more)
rules/yara/script/: script_target_js_obfuscated_dropper.yar  script_target_powershell_downloader.yar  script_target_vbs_downloader.yar
rules/yara/windows/: windows_family_darksiderat.yar  windows_family_nanoloader.yar  windows_family_rustystealer.yar  windows_family_signature_pack_01.yar  windows_generic_lolbin_credential_rules.yar  windows_target_credential_theft.yar  windows_target_ransomware_behavior.yar
scripts/: benchmark_scan_1000_pe.py  benchmark_scan_matrix.py  capture_gui_screenshot.py  collect_intel_matrix.py  smoke_packaged_app.py  test_intel_optimization.py  test_parallel_download.py
tests/: __init__.py
tests/e2e/: test_api_endpoints.py  test_cli_scan.py
tests/integration/: test_export_formats.py  test_intel_settings_persistence.py
tests/unit/: test_api_extractor.py  test_api_scan_jobs.py  test_apk_parser.py  test_cfg_builder.py  test_crud.py  test_enrichment.py  test_exporter.py  test_feature_vector.py  test_hashing.py  test_heuristic.py  test_identifier.py  test_pe_parser.py  test_predictor.py  test_report_template.py  test_repository.py  test_scanner.py  test_security_gate.py  test_settings.py  test_similarity.py  test_string_extractor.py  test_trainer.py  test_vt_client.py  test_watcher.py  test_yara_engine.py
